Fixed overflow issue with navbar-text colliding with menu

--- a/core/static/roca/css/roca.css
+++ b/core/static/roca/css/roca.css
@@ -106,7 +106,8 @@ img {
       font-style: normal;
       font-size: 1em;
       line-height: 40px;
-      width: 250px;
+      overflow: visible;
+      width: 100px;
       color: #D9D9D9;
       display: block;
       white-space: nowrap; }
